# ornith-mlx-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
ornith_mlx_eval/: __init__.py  cli.py  graders.py  mlx_session.py  parsing.py  perf.py  profile.py  reporting.py  results.py  runner.py  sandbox.py  suites.py
suites/: smoke.json
tests/: __init__.py  test_cli.py  test_graders.py  test_license.py  test_mlx_session.py  test_parsing.py  test_perf.py  test_profile.py  test_public_readiness.py  test_runner_reporting.py  test_sandbox.py  test_suites.py
